--- a/src/JVX/components/buttons/radiobutton/UIRadioButton.scss
+++ b/src/JVX/components/buttons/radiobutton/UIRadioButton.scss
@@ -1,8 +1,5 @@
 .rc-radiobutton {
     display: inline-flex;
     height: inherit;
-}
-
-.p-radiobutton, .p-radiobutton-label {
-    align-self: center;
+    width: inherit;
 }
