--- a/src/JVX/components/checkbox/UICheckBox.scss
+++ b/src/JVX/components/checkbox/UICheckBox.scss
@@ -1,8 +1,5 @@
 .rc-checkbox {
     display: inline-flex;
     height: inherit;
-}
-
-.p-checkbox {
-    align-self: center;
+    width: inherit;
 }
